base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-web
  namespace: uptime-kuma
  labels:
    app: uptime-kuma-web
spec:
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: uptime-kuma-web
  type: ClusterIP
