base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-web
  namespace: uptime-kuma
spec:
  rules:
    - host: uptime.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: uptime-kuma-web
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: ''
